--- a/static/css/main.css
+++ b/static/css/main.css
@@ -134,9 +134,9 @@ a:hover {
 
 /* ------------------------------- FOOTER ----------------------------------- */
 footer {
+  color:black;
   width: 100%;
   margin: 50px 0;
-  color:black;
   padding: 0px 50px;
 
   display: flex;
@@ -145,7 +145,6 @@ footer {
 
 .footer-message {
   text-align: center;
-  float: left;
 
   /* Font */
   font-family: roboto, sans-serif;
@@ -170,7 +169,7 @@ footer {
   letter-spacing: 0.1em;
 }
 
-.footer-menu div {
+.footer-menu {
   display: flex;
 }
 
